--- a/KeyConcealment/KeyConcealment/App.axaml
+++ b/KeyConcealment/KeyConcealment/App.axaml
@@ -11,5 +11,6 @@
 
     <Application.Styles>
         <FluentTheme />
+        <StyleInclude Source="avares://KeyConcealment/Assets/Icons.axaml" />
     </Application.Styles>
 </Application>
