--- a/KeyConcealment/KeyConcealment/Assets/ViewStyles/MainViewStyle.axaml
+++ b/KeyConcealment/KeyConcealment/Assets/ViewStyles/MainViewStyle.axaml
@@ -21,17 +21,20 @@
     </Style>
     <!-- ******************************************** -->
 
-    <!-- open/close menu toggle style -->
-    <Style Selector="Button.ToggleMenu">
+    <!-- buttons inside menu bar style -->
+    <Style Selector="Button.MenuButton">
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="Width" Value="32"/>
         <Setter Property="Height" Value="32"/>
         <Setter Property="Margin" Value="7 10"/>
     </Style>
 
-    <Style Selector="Button.ToggleMenu > PathIcon">
+    <!-- icon setting of the toggle menu button -->
+    <Style Selector="Button#ToggleMenuIcon">
         <Setter Property="Height" Value="11"/>
     </Style>
+    <!-- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
+
     <!-- ***************************************************** -->
 
     <!-- list box menu -->
@@ -62,26 +65,5 @@
     </Style>
 
     <!-- ***************************************************** -->
-
-    <!-- buttons common style -->
-        
-    <Style Selector="Button">
-        <Setter Property="Background" Value="#61ABC6"/>
-        <Setter Property="Foreground" Value="#000000"/>
-        <Setter Property="HorizontalContentAlignment" Value="Center"/>
-        <Setter Property="HorizontalAlignment" Value="Stretch"/>
-        
-    </Style>
-
-    <Style Selector="Button:disabled /template/ ContentPresenter#PART_ContentPresenter">
-        <Setter Property="Foreground" Value="#CFDDF0"/>
-        <Setter Property="Background" Value="#A4BBDA"/>
-    </Style>
-
-    <Style Selector="Button:pointerover /template/ ContentPresenter#PART_ContentPresenter">
-        <Setter Property="Background" Value="#BCD2EE"/>
-    </Style>
-
-    <!-- ***************** -->
 
 </Styles>
