--- a/KeyConcealment/KeyConcealment/Assets/ViewStyles/LoginViewStyle.axaml
+++ b/KeyConcealment/KeyConcealment/Assets/ViewStyles/LoginViewStyle.axaml
@@ -2,12 +2,24 @@
     xmlns="https://github.com/avaloniaui"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <!-- Stack panels -->
     <Style Selector = "StackPanel">
         <Setter Property="Margin" Value="10"/>
         <Setter Property="Spacing" Value="10"/>
     </Style>
 
-    <Style Selector = "TextBox#InsPwd">
+    <Style Selector = "Border.BoxStackPan">
+        <Setter Property="BorderBrush" Value="Black"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="CornerRadius" Value="3"/>
+        <Setter Property="BoxShadow" Value="5 5 10 0 DarkGray"/>        
+    </Style>
+    <!-- **************************************** -->
+
+    <Style>
+    </Style>
+
+    <Style Selector = "TextBox.Pwd">
         <Setter Property="Padding" Value="10"/>
         <Setter Property="Margin" Value="10"/>
         <Setter Property="Height" Value="50"/>
@@ -15,23 +27,23 @@
         <Setter Property="AcceptsReturn" Value="False"/>
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="MaxLines" Value="1"/>
+        <Setter Property="PasswordChar" Value="*"/>
     </Style>
 
-    <Style Selector = "TextBlock#Title">
-        <Setter Property="DockPanel.Dock" Value="Top"/>
+    <Style Selector = "TextBlock.Title">
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Margin" Value="0 10 0 20"/>
-        <Setter Property="FontSize" Value="26"/>
+        <Setter Property="FontSize" Value="20"/>
         <Setter Property="FontWeight" Value="Medium"/>
     </Style>
     
-    <Style Selector = "Button#Login">
+    <Style Selector = "Button.ConfirmButton">
         <Setter Property="HorizontalAlignment" Value="Stretch"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Margin" Value="0 10 0 0"/>
-        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="FontSize" Value="16"/>
         <Setter Property="Height" Value="50"/>
     </Style>
 </Styles>
