--- a/KeyConcealment/KeyConcealment/Assets/ViewStyles/LoginViewStyle.axaml
+++ b/KeyConcealment/KeyConcealment/Assets/ViewStyles/LoginViewStyle.axaml
@@ -16,8 +16,8 @@
     </Style>
     <!-- **************************************** -->
 
-    <Style>
-    </Style>
+
+    <!-- text Containers -->
 
     <Style Selector = "TextBox.Pwd">
         <Setter Property="Padding" Value="10"/>
@@ -33,17 +33,30 @@
     <Style Selector = "TextBlock.Title">
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Margin" Value="0 10 0 20"/>
+        <Setter Property="Margin" Value="0 20 0 20"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="FontWeight" Value="Medium"/>
     </Style>
+
+    <!-- **************************************** -->
+
+    <!-- Buttons -->
     
     <Style Selector = "Button.ConfirmButton">
-        <Setter Property="HorizontalAlignment" Value="Stretch"/>
-        <Setter Property="HorizontalContentAlignment" Value="Center"/>
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Margin" Value="0 10 0 0"/>
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="Height" Value="50"/>
     </Style>
+
+    <Style Selector="Button#ResetButton">
+        <Setter Property="Height" Value="50"/>
+        <Setter Property="Foreground" Value="#1E1E1E"/>
+        <Setter Property="Background" Value="#DF3716"/>
+    </Style>
+
+    <Style Selector="Button#ResetButton:pointerover /template/ ContentPresenter#PART_ContentPresenter">
+        <Setter Property="Background" Value="#ED6145"/>
+    </Style>
+
+    <!-- **************************************** -->
+    
 </Styles>
