Implementing Style oraganization changes and masterView
- Master view implemented
- login view: added UserInputStyle as StyleInclude

--- a/KeyConcealment/KeyConcealment/Views/LoginView.axaml
+++ b/KeyConcealment/KeyConcealment/Views/LoginView.axaml
@@ -14,6 +14,7 @@
 
   <UserControl.Styles>
         <StyleInclude Source="/Assets/ViewStyles/CommonViewStyle.axaml" />
+        <StyleInclude Source="/Assets/ViewStyles/UserInputStyle.axaml" />
         <StyleInclude Source="/Assets/ViewStyles/LoginViewStyle.axaml" />
   </UserControl.Styles>
   
