adding confirmation text box for new password

--- a/KeyConcealment/KeyConcealment/Views/MasterView.axaml
+++ b/KeyConcealment/KeyConcealment/Views/MasterView.axaml
@@ -57,6 +57,12 @@
                             Text = "{Binding NewPwd}">
                       </TextBox>
 
+                      <TextBox
+                            Classes = "Pwd"
+                            Watermark = "Confirm New Master Password"
+                            Text = "{Binding ConfNewPwd}">
+                      </TextBox>
+
                       <Button
                             Classes = "ConfirmButton"
                             Content = "CHANGE MASTER PASSWORD"
