Changing styles organization
- CommonViewStyle:
	* now contains Border.Box Style (previously called Border.BoxStackPan) to add shadowed effect

- UserInput:
	* removed Boreder.BoxStackPan
	* TextBox.Pwd is now splitted in two

Login and master view were changed to comply with new naming system

--- a/KeyConcealment/KeyConcealment/Assets/ViewStyles/CommonViewStyle.axaml
+++ b/KeyConcealment/KeyConcealment/Assets/ViewStyles/CommonViewStyle.axaml
@@ -22,6 +22,15 @@
 
     <!-- ***************** -->
 
+    <!-- Border to create shadowed box -->
+    <Style Selector = "Border.Box">
+        <Setter Property="BorderBrush" Value="Black"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="CornerRadius" Value="3"/>
+        <Setter Property="BoxShadow" Value="5 5 10 0 DarkGray"/>        
+    </Style>
+    <!-- **************************************** -->
+
     <Style Selector="Separator">
         <Setter Property="Margin" Value="25 25 25 25"/>
     </Style>
