--- a/KeyConcealment/KeyConcealment/Assets/ViewStyles/UserInputStyle.axaml
+++ b/KeyConcealment/KeyConcealment/Assets/ViewStyles/UserInputStyle.axaml
@@ -4,7 +4,7 @@
 
     <!-- text Containers -->
 
-    <Style Selector = "TextBox.Pwd">
+    <Style Selector = "TextBox.UserData">
         <Setter Property="Padding" Value="10"/>
         <Setter Property="Margin" Value="10"/>
         <Setter Property="Height" Value="50"/>
@@ -12,6 +12,9 @@
         <Setter Property="AcceptsReturn" Value="False"/>
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="MaxLines" Value="1"/>
+    </Style>
+
+    <Style Selector = "TextBox.Pwd">
         <Setter Property="PasswordChar" Value="*"/>
     </Style>
 
@@ -23,16 +26,6 @@
         <Setter Property="FontWeight" Value="Medium"/>
     </Style>
 
-    <!-- **************************************** -->
-
-
-    <!-- Border for stack panel that contains user input -->
-    <Style Selector = "Border.BoxStackPan">
-        <Setter Property="BorderBrush" Value="Black"/>
-        <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="CornerRadius" Value="3"/>
-        <Setter Property="BoxShadow" Value="5 5 10 0 DarkGray"/>        
-    </Style>
     <!-- **************************************** -->
 
     <!-- Confirm button style -->
