--- a/KeyConcealment/KeyConcealment/Assets/ViewStyles/CredsViewStyle.axaml
+++ b/KeyConcealment/KeyConcealment/Assets/ViewStyles/CredsViewStyle.axaml
@@ -4,6 +4,27 @@
 
     <Style Selector="DataGrid">
         <Setter Property="Margin" Value="10"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="Black"/>
+        <Setter Property="GridLinesVisibility" Value="Horizontal"/>
+
+        <Setter Property="RowHeight" Value="30"/>
+        <Setter Property="Height" Value="350"/>
+        
+    </Style>
+
+
+    <Style Selector="StackPanel.HorizontalStackPan">
+        <Setter Property="Orientation" Value="Horizontal"/>
+    </Style>
+
+    <Style Selector = "StackPanel">
+        <Setter Property="Margin" Value="10"/>
+        <Setter Property="Spacing" Value="10"/>
+    </Style>
+
+    <Style Selector = "TextBlock.Caption">
+        <Setter Property="Margin" Value="0 5"/>
     </Style>
     
 </Styles>
